G/Parser.grm
/* vim: set filetype=sml : */
%token <int*(int*int)> NUM
%token <string*(int*int)> ID
%token <(int*int)> PLUS MINUS
%token <(int*int)> FUN LPAR RPAR ARROW
%token <(int*int)> END MATCHARROW
%token <(int*int)> INT BOOL BAR COLON COMMA
%token <(int*int)> READ WRITE EOF
%token <(int*int)> TRUE FALSE
%token <(int*int)> CASE OF LET IN
%token <(int*int)> IF THEN ELSE
%token <(int*int)> EQUAL LESS
%token <(int*int)> AND OR NOT
%token <(int*int)> AT SEMICOLON

%right BAR
%right MATCHARROW
%left PLUS MINUS
%right WRITE

%start Prog
%type <Cat.Prog> Prog
%type <Cat.Type> Type
%type <Cat.Type list> Types
%type <Cat.Exp> Exp
%type <Cat.Exp list> Exps
%type <Cat.Match> Match
%type <Cat.Pat> Pat
%type <Cat.Pat list> Pats
%type <Cat.FunDec list> FunDecs
%type <Cat.Dec> Dec

%%

Prog : FunDecs Exp EOF { ([],$1,$2) }
;

FunDecs : FUN ID COLON Type ARROW Type Match END FunDecs
                       { (#1 $2, $4, $6, $7, $1) :: $9 }
        |              { [] }
;

Type : INT             { Cat.Int $1 }
     | BOOL            { Cat.Bool $1 }
     | ID              { Cat.TyVar $1 }
;

Types : Type           { [$1] }
      | Types COMMA Types
                       { $1 @ $3 }

Pat : NUM              { Cat.NumP $1 }
    | TRUE             { Cat.TrueP $1 }
    | FALSE            { Cat.FalseP $1 }
    | AT               { Cat.NullP $1 }
    | ID               { Cat.VarP $1 }
    | LPAR Pats RPAR   { Cat.TupleP ($2, $1) }
;

Pats : Pat             { [$1] }
     | Pats COMMA Pats { $1 @ $3 }
;

Match : Pat MATCHARROW Exp
                       { [($1,$3)] }
      | Match BAR Match
                       { $1 @ $3 }
;

Exp :  NUM             { Cat.Num $1 }
     | TRUE            { Cat.True $1 }
     | FALSE           { Cat.False $1 }
     | AT COLON ID     { Cat.Null (#1 $3, $1) }
     | ID              { Cat.Var $1 }
     | Exp PLUS Exp    { Cat.Plus ($1, $3, $2) }
     | Exp MINUS Exp   { Cat.Minus ($1, $3, $2) }
     | Exp EQUAL Exp   { Cat.Equal ($1, $3, $2) }
     | Exp LESS Exp    { Cat.Less ($1, $3, $2) }
     | NOT Exp         { Cat.Not ($2, $1) }
     | Exp AND Exp     { Cat.And ($1, $3, $2) }
     | Exp OR Exp      { Cat.Or ($1, $3, $2) }
     | IF Exp THEN Exp ELSE Exp
                       { Cat.If ($2, $4, $6, $1) }
     | LET Dec IN Exp  { Cat.Let ($2, $4, $1) }
     | CASE Exp OF Match END
                       { Cat.Case($2, $4, $1) }
     | ID Exp %prec WRITE
                       { Cat.Apply (#1 $1, $2, #2 $1) }
     | READ            { Cat.Read $1 }
     | WRITE Exp       { Cat.Write ($2, $1) }
     | LPAR Exp RPAR   { $2 }
;

Dec : Pat EQUAL Exp    { [Cat.Dec ($1, $3, $2)] }
    | Dec SEMICOLON Dec
                       { $1 @ $3 }
